# MergeOSProfessional

./: CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  COPYING  COPYING.ARM  CREDITS  Doxyfile  INSTALL  PreLoad.cmake  README.md  apistatus.lst  configure.cmd  configure.sh  toolchain-msvc.cmake
base/applications/cmdutils/fc/: CMakeLists.txt  fc.c  fc.h  fc.rc  text.h
base/applications/cmdutils/fc/lang/: pl-PL.rc  zh-CN.rc  zh-TW.rc
base/applications/network/wlanconf/: CMakeLists.txt  wlanconf.c  wlanconf.rc
base/services/rpcss/: CMakeLists.txt  rpcss.rc  rpcss_main.c  setup.c
base/services/umpnpmgr/: CMakeLists.txt  install.c  precomp.h  rpcserver.c  umpnpmgr.c  umpnpmgr.rc
base/setup/mergeos/: CMakeLists.txt  drivepage.c  mergeos.c  mergeos.exe.manifest  mergeos.h  mergeos.rc  treelist.c  treelist.h
base/setup/mergeos/lang/: bg-BG.rc  cs-CZ.rc  de-DE.rc  el-GR.rc  en-US.rc  es-ES.rc  et-EE.rc  eu-ES.rc  fi-FI.rc  fr-FR.rc  he-IL.rc  hi-IN.rc  hu-HU.rc  id-ID.rc  it-IT.rc  ja-JP.rc  ms-MY.rc  no-NO.rc  pl-PL.rc  pt-BR.rc  pt-PT.rc  ro-RO.rc  ru-RU.rc  sk-SK.rc  sq-AL.rc  tr-TR.rc  uk-UA.rc  vi-VN.rc  zh-CN.rc  zh-HK.rc  zh-TW.rc
base/setup/mergeos/res/: README.txt
base/setup/mergeos/spapisup/: fileqsup.c  infsupp.c
base/system/services/: CMakeLists.txt  config.c  controlset.c  database.c  driver.c  groupdb.c  lock.c  rpcserver.c  security.c  services.c  services.rc
base/system/services/lang/: zh-HK.rc
dll/win32/advapi32/: CMakeLists.txt  advapi32.h  advapi32.rc
dll/win32/advapi32/misc/: dllmain.c  efs.c  evntrace.c  hwprofiles.c  logon.c  msi.c  shutdown.c  sysfunc.c  unicode.c
dll/win32/advapi32/reg/: hkcr.c  reg.c  reg.h
dll/win32/advapi32/sec/: ac.c  audit.c  lsa.c  misc.c  safer.c  sec.c  trustee.c
dll/win32/advapi32/service/: rpc.c  scm.c  sctrl.c  winreg.c
dll/win32/advapi32/token/: token.c
dll/win32/advapi32/wine/: cred.c  crypt.c  crypt.h  crypt_des.c  crypt_lmhash.c  security.c
dll/win32/iphlpapi/: CMakeLists.txt  address.c  dhcp.h  dhcp_mergeos.c  icmp.c  ifenum_mergeos.c  ip.h  iphlpapi.rc  iphlpapi_mergeos.c  iphlpapi_private.h  merge-notes.txt
dll/win32/lsasrv/: CMakeLists.txt  dssetup.c  lookup.c  lsarpc.c  lsasrv.h  lsasrv.rc  privileges.c  registry.c  utils.c
dll/win32/netapi32/: CMakeLists.txt  dfs.c  dssetup.c  group_new.c  schedule.c  srvsvc.c  utils.c  wksta_new.c
drivers/crypto/ksecdd/: CMakeLists.txt  crypt.c  dispatch.c  ksecdd.c  ksecdd.h  ksecdd.rc  random.c  stubs.c
drivers/hid/hidparse/: CMakeLists.txt  hidparse.c  hidparse.rc
drivers/network/ndisuio/: CMakeLists.txt  createclose.c  ioctl.c  main.c  misc.c  ndisuio.h  ndisuio.rc  protocol.c  readwrite.c
drivers/setup/blue/: CMakeLists.txt  blue.c  blue.h  blue.rc  font.c
drivers/wdm/audio/backpln/audio_test/: CMakeLists.txt
media/: CMakeLists.txt  forwardcompatible.manifest  systemcompatible.manifest
media/doc/: 3rd Party Files.txt  Chinese translation notes.txt  HACKING  INDEX  INTERNALS  Romanian translation notes.txt  WINESYNC.txt  notes  win32k_refs.txt
media/drivers/etc/: .gitattributes  hosts  networks  protocol  services
media/fonts/: CMakeLists.txt
media/fonts/doc/Arial/: README.txt
media/fonts/doc/ArialBlack/: README.txt
media/fonts/doc/CourierNew/: README.txt
media/fonts/doc/FranklinGothicMedium/: README.txt
media/fonts/doc/Georgia/: README.txt
media/fonts/doc/LucidaConsole/: README.txt
media/fonts/doc/PalatinoLinotype/: README.txt
media/fonts/doc/TimesNewRoman/: README.txt
media/fonts/doc/Verdana/: README.txt
media/inf/: CMakeLists.txt  NET_NIC.inf  audio.inf  battery.inf  bda.inf  bth.inf  c_image.inf  defltsv.inf  defltwk.inf  display.inf  fdc.inf  flpydisk.inf  font.inf  hal.inf  hdc.inf  input.inf  intl.inf  keyboard.inf  ks.inf  kscaptur.inf  layout.inf  legcydrv.inf  machine.inf  monitor.inf  msmouse.inf  nettcpip.inf  ports.inf  scsi.inf  shortcuts.inf  syssetup.inf  syssetup.inf.tpl  unknown.inf  usb.inf  usbport.inf  volume.inf  wdmaudio.inf  wmiacpi.inf
media/nls/: CMakeLists.txt
media/sdb/: CMakeLists.txt  sysmain.xml
media/themes/Blackshade/blackshade.msstyles/: blackshade.rc
media/themes/Blackshade/blackshade.msstyles/lang/: de-DE.rc  en-US.rc  it-IT.rc  pl-PL.rc  ro-RO.rc  ru-RU.rc  tr-TR.rc  zh-HK.rc  zh-TW.rc
media/themes/Blackshade/blackshade.msstyles/textfiles/: ExtraLargeNormal.INI  NormalNormal.INI
media/themes/Lautus/lautus.msstyles/: CMakeLists.txt  lautus.rc
media/themes/Lautus/lautus.msstyles/lang/: cs-CZ.rc  de-DE.rc  en-US.rc  es-ES.rc  fr-FR.rc  it-IT.rc  pl-PL.rc  ro-RO.rc  ru-RU.rc  tr-TR.rc  zh-CN.rc  zh-HK.rc  zh-TW.rc
media/themes/Lautus/lautus.msstyles/textfiles/: LargeFontsNormal.INI
media/themes/Lunar/lunar.msstyles/: CMakeLists.txt  lunar.rc
media/themes/Lunar/lunar.msstyles/lang/: cs-CZ.rc  de-DE.rc  en-US.rc  (+7 more)
media/themes/Mizu/mizu.msstyles/: CMakeLists.txt  mizu.rc
media/themes/Modern/modern.msstyles/: CMakeLists.txt  LICENSE  modern.rc
media/vgafonts/: CMakeLists.txt
modules/wallpapers/: CMakeLists.txt  ReadMe.txt  wallpapers.txt
modules/wallpapers/Angelus/: CMakeLists.txt  ReadMe.txt
modules/wallpapers/Angelus/Bliss/: CMakeLists.txt
modules/wallpapers/Angelus/BlueHorizon/: CMakeLists.txt
modules/wallpapers/Angelus/DeepSea/: CMakeLists.txt
modules/wallpapers/Angelus/Fisherman/: CMakeLists.txt
modules/wallpapers/Angelus/Flower/: CMakeLists.txt
modules/wallpapers/Angelus/MergeOS/: CMakeLists.txt
modules/wallpapers/Angelus/MergeOSNewHope/: CMakeLists.txt
modules/wallpapers/Angelus/MergeOSSea/: CMakeLists.txt
modules/wallpapers/Angelus/MergeOSSunset/: CMakeLists.txt
modules/wallpapers/Angelus/Rain/: CMakeLists.txt
modules/wallpapers/Angelus/Sea/: CMakeLists.txt
modules/wallpapers/Angelus/Sky/: CMakeLists.txt
modules/wallpapers/Angelus/VistaMergeOS/: CMakeLists.txt
modules/wallpapers/Silhouette/: CMakeLists.txt  README.md
sdk/tools/xml2sdb/: CMakeLists.txt
subsystems/csr/csrss/: CMakeLists.txt  csrss.c  csrss.rc
win32ss/gdi/gdi32/wine/: CMakeLists.txt  emfdc.c  emfdrv.c  enhmetafile.c  gdi_private.h  metadc.c  metafile.c
(+9122 files in other folders)
