add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/1920px_Polarlicht.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/clouds.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/grass.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/lake.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_CirclesBlue_1.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_CirclesBlue_2.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_CirclesGold_1.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_CirclesGold_2.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_Hexagons.jpg DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_Mizu.png DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_Mizu_4x3.png DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_Mizu_16x9_A.png DESTINATION mergeos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/MergeOS_Mizu_16x9_B.png DESTINATION mergeos/Web/Wallpaper FOR all)
add_subdirectory(Angelus)
add_subdirectory(Silhouette)
