add_subdirectory(Bliss)
add_subdirectory(BlueHorizon)
add_subdirectory(DeepSea)
add_subdirectory(Fisherman)
add_subdirectory(Flower)
add_subdirectory(Rain)
add_subdirectory(MergeOS)
add_subdirectory(MergeOSNewHope)
add_subdirectory(MergeOSSea)
add_subdirectory(MergeOSSunset)
add_subdirectory(Sea)
add_subdirectory(Sky)
add_subdirectory(VistaMergeOS)
