
include_directories(BEFORE ${MERGEOS_SOURCE_DIR}/include/mergeos/wine)
add_executable(symdump symdump.c)
set_module_type(symdump win32cui)
target_link_libraries(symdump wine)
add_importlibs(symdump dbghelp shlwapi msvcrt kernel32 ntdll)
if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
    target_compile_options(symdump PRIVATE -Wno-unused-but-set-variable)
endif()
add_cd_file(TARGET symdump DESTINATION mergeos/system32 FOR all)
